--- a/LaserRadar/Robot/app/src/main/res/layout/activity_robot_config.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/activity_robot_config.xml
@@ -9,13 +9,16 @@
     tools:context="com.android.jdrd.robot.activity.MainActivity">
     <RelativeLayout
         android:id="@+id/main"
-        android:background="@color/darkkhaki"
+        android:background="@color/green"
         android:layout_width="match_parent"
         android:layout_height="60dp">
         <Button
             android:id="@+id/setting_back"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/btn_back_selector"
+            android:layout_centerVertical="true"
+            android:layout_width="17dp"
+            android:layout_height="32dp" />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -50,7 +53,7 @@
                 android:layout_height="60dp">
                 <TextView
                     android:layout_width="120dp"
-                    android:textSize="25sp"
+                    android:textSize="@dimen/robot_size"
                     android:gravity="center"
                     android:textColor="@color/black"
                     android:layout_height="match_parent"
@@ -58,7 +61,7 @@
                 <EditText
                     android:id="@+id/name"
                     android:layout_width="match_parent"
-                    android:textSize="25sp"
+                    android:textSize="@dimen/robot_size"
                     android:gravity="center"
                     android:textColor="@color/black"
                     android:layout_height="match_parent"
@@ -72,23 +75,28 @@
                 android:layout_width="match_parent"
                 android:background="@color/black"
                 android:layout_height="0.5dp"/>
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="60dp">
                 <TextView
                     android:layout_width="120dp"
-                    android:textSize="25sp"
+                    android:textSize="@dimen/robot_size"
                     android:gravity="center"
                     android:textColor="@color/black"
                     android:layout_height="match_parent"
-                    android:text="@string/area"/>
+                    android:text="@string/area"
+                    android:id="@+id/textView4" />
                 <Spinner
                     android:id="@+id/area"
                     android:layout_width="match_parent"
+                    android:background="@color/white"
                     android:layout_height="match_parent"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerVertical="true"
                     android:gravity="center"
-                    />
-            </LinearLayout>
+                    android:layout_toRightOf="@+id/textView4"
+                    android:layout_toEndOf="@+id/textView4" />
+            </RelativeLayout>
             <View
                 android:layout_width="match_parent"
                 android:background="@color/black"
