--- a/LaserRadar/Robot/app/src/main/res/layout/fragment_robot_dialog.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/fragment_robot_dialog.xml
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="240dp"
+    android:layout_height="240dp"
     android:orientation="horizontal"
+    android:background="@color/white"
     >
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         >
         <LinearLayout
-            android:layout_width="200dp"
-            android:layout_height="400dp"
-            android:background="@mipmap/bg"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
             <TextView
                 android:id="@+id/title"
-                android:layout_width="200dp"
+                android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:gravity="center"
                 android:textColor="@color/black"
@@ -26,6 +28,10 @@
                 />
             <GridView
                 android:id="@+id/robot_girdview"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:numColumns="auto_fit"
+                android:columnWidth="80dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
         </LinearLayout>
