--- a/LaserRadar/Robot/app/src/main/res/layout/activity_cardactivity.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/activity_cardactivity.xml
@@ -13,10 +13,10 @@
         <Button
             android:id="@+id/setting_back"
             android:background="@drawable/btn_back_selector"
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="10dp"
             android:layout_centerVertical="true"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp" />
+            android:layout_width="17dp"
+            android:layout_height="32dp" />
         <TextView
             android:id="@+id/title"
             android:layout_width="match_parent"
