--- a/LaserRadar/Robot/app/src/main/res/layout/activity_main.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/main"
         android:background="@color/green"
         android:layout_width="match_parent"
-        android:layout_height="48dp">
+        android:layout_height="@dimen/top_height">
         <ImageView
             android:id="@+id/imgViewmapnRight"
             android:layout_width="20dp"
@@ -35,10 +35,11 @@
         android:layout_below="@+id/main"
         android:layout_width="match_parent"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:gravity="center"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
         android:orientation="vertical"
-        android:layout_height="125dp">
+        android:layout_height="100dp">
 
         <HorizontalScrollView
             android:id="@+id/aas"
@@ -58,7 +59,6 @@
                     android:divider="#EEEEEE"
                     android:horizontalSpacing="15dp"
                     android:verticalSpacing="15dp"
-                    android:padding="5dp"
                     android:stretchMode="spacingWidthUniform"
                     >
                 </GridView>
@@ -67,7 +67,6 @@
     </LinearLayout>
     <LinearLayout
         android:id="@+id/linear_desk"
-        android:layout_marginTop="10dp"
         android:layout_below="@+id/linear_robot"
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -78,6 +77,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:background="@color/white"
+            android:layout_marginTop="15dp"
             android:layout_height="70dp">
             <TextView
                 android:id="@+id/area_text"
@@ -108,31 +108,44 @@
         <GridView
             android:id="@+id/gview"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:dividerHeight = "9dp"
+            android:layout_height="match_parent"
+            android:dividerHeight = "1dp"
             android:divider="#EEEEEE"
+            android:background="@color/white"
+            android:soundEffectsEnabled="true"
+            android:smoothScrollbar="true"
+            android:verticalSpacing="1.0dp"
+            android:horizontalSpacing="1.0dp"
             android:numColumns="auto_fit"
-            android:columnWidth="80dp"
+            android:columnWidth="90dp"
+            android:layout_marginBottom="20dp"
             />
     </LinearLayout>
     <RelativeLayout
         android:layout_below="@+id/main"
         android:id="@+id/map_right_Ralative"
         android:layout_width="wrap_content"
+        android:background="@color/green"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true">
         <LinearLayout
             android:id="@+id/linearlayout_all"
             android:layout_width="100dp"
-            android:visibility="gone"
             android:layout_alignParentLeft="true"
             android:orientation="vertical"
+            android:visibility="gone"
             android:layout_height="match_parent">
             <ListView
                 android:id="@+id/area"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:divider="@color/black"
+                android:dividerHeight="0.5dp"
                 />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@color/black"/>
         </LinearLayout>
     </RelativeLayout>
 
