--- a/LaserRadar/Robot/app/src/main/res/layout/fragment_dialog.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/fragment_dialog.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="200dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="horizontal"
     android:background="#EEEEEE"
     >
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_weight="1">
+        >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -17,7 +17,8 @@
             android:orientation="vertical">
             <TextView
                 android:id="@+id/title"
-                android:layout_width="match_parent"
+                android:textColor="@color/black"
+                android:layout_width="300dp"
                 android:layout_height="60dp"
                 android:gravity="center"
                 android:text="@string/add_area"
@@ -25,8 +26,9 @@
                 />
             <EditText
                 android:id="@+id/editText"
-                android:layout_width="match_parent"
+                android:layout_width="260dp"
                 android:layout_height="60dp"
+                android:gravity="center"
                 android:textColor="@color/black"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
@@ -35,7 +37,7 @@
                 android:background="@drawable/bg_edittext"
                 />
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="300dp"
                 android:layout_height="70dp"
                 android:orientation="horizontal"
                 >
