--- a/LaserRadar/Robot/app/src/main/res/layout/item.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/item.xml
@@ -1,36 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="100dp"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@color/white"
-    android:padding="10dp"
     >
-    <RelativeLayout
-        android:layout_marginTop="20dp"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp">
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:layout_height="match_parent">
         <ImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@animator/btn_desk_selector"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
             />
         <TextView
             android:id="@+id/name"
             android:layout_centerInParent="true"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:gravity="center"
+            android:textColor="@color/black"
             android:textSize="25sp"
             android:layout_height="match_parent" />
-    </RelativeLayout>
+    </LinearLayout>
     <TextView
         android:id="@+id/text"
         android:layout_marginTop="9dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/btn_cancle"
+        android:visibility="gone"
         android:layout_gravity="center"
         android:gravity="center"
         android:textSize="13sp"
