--- a/LaserRadar/Robot/app/src/main/res/layout/listview_item.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/listview_item.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="60dp"
+    android:layout_width="match_parent"
+    android:layout_height="80dp"
     android:orientation="vertical"
+    android:background="@color/white"
     android:gravity="center"
     >
     <View
@@ -10,24 +11,25 @@
         android:background="@color/black"
         android:layout_height="0.5dp"/>
     <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="80dp">
 
         <TextView
             android:id="@+id/text"
             android:layout_width="@dimen/btn_width"
-            android:layout_height="60dp"
+            android:layout_height="80dp"
             android:gravity="center"
             android:text="@string/straight"
             android:layout_centerVertical="true"
             android:textColor="@color/black"
-            android:textSize="25sp"
+            android:textSize="22sp"
             />
         <Button
             android:id="@+id/btn"
-            android:layout_width="80dp"
-            android:layout_height="match_parent"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
             android:text="@string/config_redact"
             />
     </RelativeLayout>
