--- a/LaserRadar/Robot/app/src/main/res/layout/robot_grid_item.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/robot_grid_item.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="76dp"
-    android:layout_height="120dp"
+    android:layout_height="100dp"
     android:orientation="horizontal"
     android:background="@color/white"
     >
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#EEEEEE"/>
     <ImageView
         android:id="@+id/imageview"
         android:layout_width="56dp"
@@ -17,9 +13,7 @@
         android:layout_marginLeft="10dp"
         android:layout_alignParentTop="true"
         android:background="@mipmap/zaixian"
-        android:layout_alignRight="@+id/text"
-        android:layout_alignEnd="@+id/text" />
-
+        />
     <ImageView
         android:id="@+id/imageback"
         android:textSize="11sp"
@@ -33,7 +27,7 @@
         android:layout_centerHorizontal="true"
         />
     <TextView
-        android:id="@+id/text"
+        android:id="@+id/image"
         android:textSize="11sp"
         android:text="空闲"
         android:gravity="center"
@@ -53,19 +47,4 @@
         android:layout_marginTop="8dp"
         android:layout_below="@+id/imageview"
         android:layout_centerHorizontal="true" />
-    <View
-        android:layout_alignParentLeft="true"
-        android:layout_width="1dp"
-        android:layout_height="match_parent"
-        android:background="#EEEEEE"/>
-    <View
-        android:layout_alignParentRight="true"
-        android:layout_width="1dp"
-        android:layout_height="match_parent"
-        android:background="#EEEEEE"/>
-    <View
-        android:layout_alignParentBottom="true"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#EEEEEE"/>
 </RelativeLayout>
