--- a/LaserRadar/Robot/app/src/main/res/values/dimens.xml
+++ b/LaserRadar/Robot/app/src/main/res/values/dimens.xml
@@ -4,4 +4,13 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <dimen name="btn_width">120dp</dimen>
+    <dimen name="area_height">78dp</dimen>
+
+    <dimen name="add_width">89dp</dimen>
+    <dimen name="add_height">45dp</dimen>
+    <dimen name="top_height">48dp</dimen>
+
+    <dimen name="desk_height">80dp</dimen>
+    <dimen name="desk_text_height">50dp</dimen>
+    <dimen name="robot_size">22sp</dimen>
 </resources>
