--- a/LaserRadar/Robot/app/src/main/res/values/styles.xml
+++ b/LaserRadar/Robot/app/src/main/res/values/styles.xml
@@ -22,7 +22,7 @@
     <style name="AppWelcome" parent="AppTheme">
         <item name="android:windowBackground">@mipmap/china</item>
     </style>
-    <style name="SoundRecorder" parent="@android:style/Theme.Holo.DialogWhenLarge">
+    <style name="SoundRecorder" parent="android:style/Theme.Dialog">
         <item name="android:windowCloseOnTouchOutside">true</item>
         <item name="android:windowNoTitle">true</item>
         <!--<item name="android:backgroundDimEnabled">true</item>-->
